--- a/chapter5.tex
+++ b/chapter5.tex
@@ -3,7 +3,7 @@
 \pagebreak[4]
 \section{p153 - Exercise}
 \begin{tcolorbox}
-If $\mu^{\alpha}$ are the contravariant components of a unit vector in a surface $S$, show that $\mu^{\alpha}f_{\alpha}$ is the physical component of acceleration in the direction tangent to $S$ defined by $\mu^{\alpha}$.
+If $\mu^{\alpha}$ are the contra-variant components of a unit vector in a surface $S$, show that $\mu^{\alpha}f_{\alpha}$ is the physical component of acceleration in the direction tangent to $S$ defined by $\mu^{\alpha}$.
 \end{tcolorbox}
 As we are in an Euclidean space we can interpret $a_{mn}\mu^{\alpha}f^{\alpha}$ as $\left|\mu\right|\left|f\right|\cos\theta $ with $\theta$ the angle between the two vectors. As $\left|\mu\right|=1$ we have
 \begin{align}
@@ -39,7 +39,7 @@ $$\blacklozenge$$
 \newpage
 
 
-\section{p156 - Clarification}
+\section{p156 - Clarification to 5.231}
 \begin{tcolorbox}
 Interpretation of 
 $$\mathbf{5.231.}\spatie M_{rs}=\epsilon_{rsn}M_n=z_rF_s-z_sF_r$$
@@ -58,7 +58,7 @@ $$\blacklozenge$$
 \newpage
 
 
-\section{p156 - Clarification}
+\section{p156 - Clarification to 5.234}
 \begin{tcolorbox}
 $$\mathbf{5.234.}\spatie \dv{h_r}{t}= M_r$$
 \end{tcolorbox}
@@ -73,7 +73,7 @@ $$\blacklozenge$$
 
 
 
-\section{p158-159 - Clarification}
+\section{p158-159 - Clarification to 5.313}
 \begin{tcolorbox}
 $$\mathbf{5.313.}\spatie \omega_{rs}= -\omega_{sr}$$ From 5.310 and the vector character of $v_r$ and $z_r$ (for transformations which do not change the origin), \textbf{it follows that $\omega_{rs} $ is a Cartesian tensor of second order}.
 \end{tcolorbox}
@@ -99,7 +99,7 @@ $$\blacklozenge$$
 
 \section{p159 - Exercise}
 \begin{tcolorbox}
-Show that if a rigid body rotates about the point $z_r=b_r$ as fixed point, the velociy of a general point of the body is given by $$v_r=-\omega_{rm}\left(z_m-b_m\right)$$
+Show that if a rigid body rotates about the point $z_r=b_r$ as fixed point, the velocity of a general point of the body is given by $$v_r=-\omega_{rm}\left(z_m-b_m\right)$$
 \end{tcolorbox}
 By $\mathbf{5.302. }$:
 \begin{align}
@@ -136,7 +136,7 @@ $$\blacklozenge$$
 \newpage
 
 
-\section{p161 - Clarification}
+\section{p161 - Clarification to 5.325 and 5.326}
 \begin{tcolorbox}
 $$\mathbf{5.325.}\spatie \Omega_{np}\sum \left(mf_nz_p\right)= \Omega_{np}\sum F_nz_p $$
 and hence, since $\Omega_{np}$ is arbitrary,
@@ -154,7 +154,7 @@ $$\mathbf{5.326.}\spatie \sum m\left(f_nz_p-f_pz_n\right)= \sum \left(F_nz_p-F_p
 $$\blacklozenge$$
 \newpage
 
-\section{p161 - Clarification}
+\section{p161 - Clarification to 5.329 and 5.330}
 \begin{tcolorbox}
 $$\mathbf{5.329.}\spatie h_{np}=\sum m\left(\omega_{nq} z_q z_p -\omega_{pq} z_qz_n\right)$$
 $$= J_{npqr}\omega_{rq}$$
@@ -218,7 +218,7 @@ $$\blacklozenge$$
 Taking $N=3$, show that $\mathbf{5.424}$ may be reduced to the usual Euler equations:
 $$ I_{11}\dv{\omega^{'}_1(S^{'},S)}{t}-\left(I_{22}-I^{'}_{33}\right)\omega^{}_2(S^{'},S)\omega^{'}_3(S^{'},S)=M^{'}_1$$ and two similar equations.
 \end{tcolorbox}
-We first begin with an approach which leads to nothing. I probably made a reasoning error. I give here the whole calculation as this was interesting and alo to, later, find my mistake. After this buggy solution, I will give a second version, which works.
+We first begin with an approach which leads to nothing. I probably made a reasoning error. I give here the whole calculation as this was interesting and also to, later, find my mistake. After this buggy solution, I will give a second version, which works.
 $\mathbf{5.424}$:
 \begin{align}
 M^{'}_{ab}&=J^{'}_{abrq}\dv{\omega^{'}_{rq}(S^{'},S)}{t}+J^{'}_{cdrq}\left(\delta_{ac}\delta_{du}\delta_{bv}+\delta_{bd}\delta_{cu}\delta_{av}\right)\omega^{'}_{rq}(S^{'},S)\omega^{'}_{uv}(S^{'},S) =\\
@@ -548,7 +548,7 @@ $$\blacklozenge$$
 
 \section{p174 - Clarification}
 \begin{tcolorbox}
-It is easy to see thet the lines of force are the orthogonal trajectories of the equipotential surface $V=C^{t}$
+It is easy to see that the lines of force are the orthogonal trajectories of the equipotential surface $V=C^{t}$
 \end{tcolorbox}
 Consider a curve given by $x^r=x^r\left(u\right)$. \\Along that line we have $V= V\left(x^r\left(u\right)\right)$. Take $u=s$ as parameter and let's impose that $V\left(s\right)= C^{t}$.\\ We have
 $\dv{V}{s} = \frac{\partial{V}}{\partial{x^r}}\dv{x^r}{s} =\frac{\partial{V}}{\partial{x^r}}\lambda^r =0$ with $\lambda^r=\dv{x^r}{s}$ the tangent vector along that curve.\\ But $X_r = \frac{\partial{V}}{\partial{x^r}}$. \\
@@ -618,7 +618,7 @@ $$\blacklozenge$$
 \newpage
 
 
-\section{p181 and p182 - Clarification Figures 13., 14. and 15.}
+\section{p181-p182 - Clarification Figures 13., 14. and 15.}
 \begin{tcolorbox}
 There are several ways to perform  a map of the configuration space of a rigid body with fixed point.
 \end{tcolorbox}
@@ -719,7 +719,7 @@ $$\blacklozenge$$
 
 \section{p186 - Exercise 1}
 \begin{tcolorbox}
-If a vector at the point with coordinates $\left(1,1,1\right)$ in Euclidean $3$-space has components $\left(3,-1,2\right)$, find the contravariant, covariant and physical components in spherical polar coordinates.
+If a vector at the point with coordinates $\left(1,1,1\right)$ in Euclidean $3$-space has components $\left(3,-1,2\right)$, find the contra-variant, covariant and physical components in spherical polar coordinates.
 \end{tcolorbox}
 The tensor $T_n$ to consider is $\left(3,-1,2\right) - \left(1,1,1\right)= \left(2,-2,1\right)$.\\
 The Jacobian matrix for the transformation $z^n \rightarrow x^k$, evaluated at the point $\left(1,1,1\right)$ is 
@@ -836,7 +836,7 @@ $$\blacklozenge$$
 
 \section{p186 - Exercise 2}
 \begin{tcolorbox}
-In cylindrical coordinates $\left(r, \phi,z\right)$ in Euclidean $3$-space, a vector field is such that the vector at each point points along the parametric line of $\phi$, in the sense of $\phi$ increasing, and its magnitude is $kr$, where $k$ is a constant. Find the contravariant, covariant and physical components of this vector field.
+In cylindrical coordinates $\left(r, \phi,z\right)$ in Euclidean $3$-space, a vector field is such that the vector at each point points along the parametric line of $\phi$, in the sense of $\phi$ increasing, and its magnitude is $kr$, where $k$ is a constant. Find the contra-variant, covariant and physical components of this vector field.
 \end{tcolorbox}
 We can work backwards, with the physical components as starting point. Indeed, at a point $P\left(r,\phi,z\right)$ the tensor of this vector field will have $\left(0,kr,0\right)$ as physical components in the cylindrical coordinates $\left( r, \phi,z \right)$ system.\\
 We have the metric tensor 
@@ -935,7 +935,7 @@ $$\blacklozenge$$
 
 \section{p186 - Exercise 4}
 \begin{tcolorbox}
-A particle moves on a sphere under the action of gravity. Find the contravariant an covaraiant components of the force, using colatitude and azimuth, and write down the equation of motion.
+A particle moves on a sphere under the action of gravity. Find the contra-variant an co-variant components of the force, using colatitude and azimuth, and write down the equation of motion.
 \end{tcolorbox}
 We determine first the physical components of the force.
 \begin{figure}[H]
@@ -1039,7 +1039,7 @@ $$\blacklozenge$$
 
 \section{p186 - Exercise 6}
 \begin{tcolorbox}
-Consider the motion of a particle under gravity on the smooth torus o the previous problem, the equatorial plane of the torus being horizontal. Taking the mass of the particle to unity, so that $V= bg\sin{\theta}$, show that the path of the paticle satisfies the following two differential equations. 
+Consider the motion of a particle under gravity on the smooth torus o the previous problem, the equatorial plane of the torus being horizontal. Taking the mass of the particle to unity, so that $V= bg\sin{\theta}$, show that the path of the particle satisfies the following two differential equations. 
 $$(a)\spatie \left(E-V\right)\left(a-b\cos\theta\right)^2\dv{\phi}{s} = h$$
 $$(b)\spatie b^2\left(\dv{\theta}{\phi}\right)^2=  \left(E-V\right)\frac{\left(a-b\cos\theta\right)^4}{h^2}-\left(a-b\cos\theta\right)^2$$
 where $E$ is the total energy,  $h$ is a constant and $d\sigma$ is the action line element.
@@ -1122,7 +1122,7 @@ $$\blacklozenge$$
 
 \section{p187 - Exercise 8}
 \begin{tcolorbox}
-Show that if a line of force is a geodesic         for the kinematical line element, it is also a geodesic for the action line element.
+Show that if a line of force is a geodesic for the kinematical line element, it is also a geodesic for the action line element.
 \end{tcolorbox}
 From $\mathbf{5.516}$ and  $\mathbf{5.529}$ we have
 \begin{align}
@@ -1376,7 +1376,7 @@ K^{'}_s= \left[ \omega^{'}_{sm}\left(S^{'},S\right)\omega^{'}_{nm}\left(S^{'},S\
 J^{'}_s = 2\omega^{'}_{sm}v^{'}_m\left(S^{'}\right)
 \end{array}\right.
 \end{align}
-As $\omega_s= n\delta_{s3}$ and by the requirement that the that the axis of $z^{'}_3$ coincides permanently with the axis of $z_3$, it is not hard to see that
+As $\omega_s= n\delta_{s3}$ and by the requirement  that the axis of $z^{'}_3$ coincides permanently with the axis of $z_3$, it is not hard to see that
 \begin{align}
 \left\{\begin{array}{llll}
 \omega^{}_{12}\left(S^{'},S\right) = n\\
@@ -1459,14 +1459,25 @@ $$\blacklozenge$$
 \begin{tcolorbox}
 The motion of a dynamical system is represented by a curve in configuration-space. Using the kinematical line element, express the curvature as a function of its total energy $E$, and deduce that as $E$ tends to infinity, the trajectory tends to become a geodesic . Illustrate by considering a particle moving under gravity on a smooth sphere.
 \end{tcolorbox} 
-$\mathbf{5.421}$ and $\mathbf{5.421}$:
+We have $\mathbf{5.512}$ and $\mathbf{5.533}$:
 \begin{align}
 \left\{\begin{array}{l}
-I_{st}= \delta_{st}\sum m z_q z_q - \sum m z_s z_t\\
-J_{nprq} = \sum m \left( \delta_{nr} z_p z_q - \delta_{pr} z_n z_q \right)
+v^2= a_{mn}v^mv^n= 2T\\
+\kappa v^2 = X_r\nu^r
 \end{array}\right.
+\Rightarrow \quad \kappa &= \frac{X_r\nu^r}{2T}
 \end{align}
-
+First, we have to note that nothing is said about the nature of the generalized forces (conservative or not) and therefore we use $\mathbf{5.517}$
+\begin{align}
+dW = X_r dx^r
+\end{align}
+From this we can express $T$ as
+\begin{align}
+T\left(s\right) &= T_0 + \int_{0}^{s}dW\\
+&= T_0 + \int_{0}^{s}X_r dx^r\\
+\end{align}
+where $T_0$ is the kinetic energy at the initial configuration $s=0$.\\
+Suppose now that the for $ s\rightarrow +\infty, \quad \int_{0}^{s}dW\rightarrow +\infty$. In that case, the kinetical energy will represent the total energy of the system, $T\rightarrow E$ and $\kappa \rightarrow 0$ for $E\rightarrow +\infty$ provided that $X_r\nu^r\cancel{\rightarrow}\pm \infty$. Consider $\mathbf{5.535}\quad dW=X ds\cos \phi$ where $X$ is the magnitude of the generalized force and $\phi$ the angle between the line of force and the trajectory.
 $$\blacklozenge$$
 \newpage
 
@@ -1791,7 +1802,7 @@ v_4\end{matrix}\right) &= -\theta\left( \begin{matrix}
 \end{matrix}\right)
 \end{align}
 So the velocities will vanish when$$\omega_{12}\omega_{34}-\omega_{13}\omega_{24}+\omega_{14}\omega_{23}=0$$
-$$\blacklozenge$$\\
+$$\lozenge$$\\
 Suppose $N$ is odd. Let's define the following vector
 \begin{align}
 \omega_{i_1}= \frac{1}{2^{\frac{N-1}{2}}\frac{N-1}{2}!}\epsilon_{i_{1} i_{2} \dots i_{N}}\prod_{k=1}^{\frac{N-1}{2}}\omega_{i_{2k} i_{2k+1}}
@@ -1814,7 +1825,6 @@ v_p &= -  \omega_{pi_{1}}z_{i_{1}}\\
 On the right side, for having a non-zero term, we need that $p\ne i_{1}$ ( $\omega_{st}$ skew-symmetric ). This leaves us with only $N-1$ possible choices in the indices but as $\epsilon_{i_{1} i_{2} \dots i_{N}}$ needs $N$ mutual different indices it is obvious that each term in $(17)$ will have a $\epsilon_{i_{1} i_{2} \dots i_{N}}= 0$ \\
 Conclusion, all $v_p$ are zero and hence the defined line in $(15)$ is an instantaneous line of rotation.
 \\
-
 $$\blacklozenge$$
 \newpage 
 
@@ -1824,7 +1834,7 @@ $$\blacklozenge$$
 \begin{tcolorbox}
 The equations $\mathbf{5.329}$ do not determine $J_{nprq}$ uniquely. Why? As an alternative to $\mathbf{5.330}$, we can require $J_{npqr}$ to be skew-symmetric in the last two suffixes. Show that this defines $J_{nprq}$ uniquely as follows:
 $$J_{nprq}= \half\sum m \left(\delta_{nr}z_pz_q +\delta_{pq}z_nz_r-\delta_{nq}z_pz_r-\delta_{pr}z_nz_q \right)$$
-Prove that$J_{nprq}$, as defined here, has the same symmetries as the covariant curvature tensor (cf. $\mathbf{3.115}$, $\mathbf{3.116}$) and that, for $N=3$, we have
+Prove that$J_{nprq}$, as defined here, has the same symmetries as the covariant curvature tensor (see  $\mathbf{3.115}$, $\mathbf{3.116}$) and that, for $N=3$, we have
 $$ I_{st} = \half\epsilon_{snp}\epsilon_{trq}J_{nprq}, \quad  J_{nprq}=  \half\epsilon_{snp}\epsilon_{trq} I_{st}$$
 \end{tcolorbox} 
 The equations $\mathbf{5.329}$ , $h_{np}=J_{nprq}\omega_{rq}$ do not determine $J_{nprq}$ uniquely because $\omega_{rq}$ is skew symmetric, so all elements at the positions $J_{np(rr)}$ can be chosen arbitrarily and still comply with the equation.\\
