--- a/images/fig_p183_5561_a.tex
+++ b/images/fig_p183_5561_a.tex
@@ -73,7 +73,7 @@
 		\tdplotdrawarc[tdplot_rotated_coords,angle,rotp]{(0,0,0)}{\rang}{-\ephi}{0}{anchor=north,rotp}{$\varphi$};	
 		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,,rotp,dashed,-Latex]{(0,0,1.43)}{0.15}{0}{360}{}{};		
  		\coordinate (phi) at (0,-0.9,0.9);
-		\draw[](phi) node[{anchor=west},rotp] {$3^{rd}\rightarrow\dot{\phi}$};
+		\draw[](phi) node[{anchor=west},rotp] {$3^{rd}\rightarrow\dot{\varphi}$};
 		\draw[tdplot_rotated_coords,brown,thick,, dashed ] (0,0,1) --(0,0,1.64) node[anchor=west]{$$};
 		% Base
 		\tdplotsetrotatedcoords{0}{0}{0};
