--- a/chapter3.tex
+++ b/chapter3.tex
@@ -786,7 +786,7 @@ $$\blacklozenge$$
 
 \section{p109 - Exercise 7}
 \begin{tcolorbox}
-Suppose that in a $V_3$ the metric is :$$ ds^2= (h_1dx^1)^2+(h_2dx^2)^2+(h_3dx^3)^2$$ whre $h_1, h_2, h_3$ are functions of the three coordinates. Calculate the curvature  tensor in terms of the $h^{'}s$ and their derivatives. Check your result by nothing that the curvature tensor will vanish if $h_1$ is a function of $x^1$ only, $h_2$ a function of $x^2$ only, and $h_3$  a function of $x^3$ only.
+Suppose that in a $V_3$ the metric is :$$ ds^2= (h_1dx^1)^2+(h_2dx^2)^2+(h_3dx^3)^2$$ where $h_1, h_2, h_3$ are functions of the three coordinates. Calculate the curvature  tensor in terms of the $h^{'}s$ and their derivatives. Check your result by nothing that the curvature tensor will vanish if $h_1$ is a function of $x^1$ only, $h_2$ a function of $x^2$ only, and $h_3$  a function of $x^3$ only.
 \end{tcolorbox}
 From $\mathbf{3.115.}$ and $\mathbf{3.115.}$ we get for the non vanishing components of the covariant curvature tensor($6$ independent components to calculate):
 \begin{align}
@@ -1521,7 +1521,7 @@ In the second term of $(11)$ we may again swap the indices $n$ and $k$ giving
 $$\blacklozenge$$
 \newpage
 
-\section{p110 - Exercise 12a}
+\section{p110 - Exercise 12a$\dagger  \dagger$}
 \begin{tcolorbox}
 Prove that the quantities $$G^{mn}+ \frac{1}{2a}\frac{\delta^2}{\delta x^r \delta x^s}\left[ a \left( a^{mn}a^{rs}-a^{mr}a^{ns} \right)\right]$$ can be expressed in terms of the metric tensor and its first derivatives.
 \end{tcolorbox}
@@ -1613,8 +1613,8 @@ with $\mathcal{L}^{mn}$ a symmetrical object in $m,n$ and depending only on term
 \end{array} \right. \\
 &= \half a^{mn}a^{rs}\left(\partial_{s}\Gamma^t_{rt}+\partial_t \Gamma^t_{rs}\right)-  a^{nr} a^{ms}\partial_t \Gamma^t_{rs}
 \end{align}
-$Q^{mn} $ a symmetrical object in $m,n$
-
+$Q^{mn} $ a symmetrical object in $m,n$ but still containing seconder order derivatives.\\
+$\dagger$ And here, I'm stuck.$\dagger$
 
 $$\blacklozenge$$
 \newpage
