--- a/chapter4.tex
+++ b/chapter4.tex
@@ -248,7 +248,7 @@ with $\left(A^{-1}B\right)_m$ of the form $C_mu+D_m$
 $$\blacklozenge$$
 \newpage
 
-\section{p126 - Exercise}
+\section{p126 - Exercise$\dagger$}
 \begin{tcolorbox}
 Show that the null cone with vertex at the origin in space-time has the equation $$\mathbf\spatie y^2_1+y^2_2+y^2_3-y^2_4=0$$
 Prove that this null cone divides space-time into three regions such that \\
@@ -461,8 +461,8 @@ D &= \left[2 \left(\kappa- \phi_0\right)\right]^2-4\left(\phi_1 +\phi_0-2\kappa\
 +\left(y_3^{(0)}y_2^{(1)}-y_2^{(0)}y_3^{(1)}\right)^2\right]\\\\
 \end{array}\right.
 \end{align}
-Obviously, this path of proving leads to nothing as $D$ can be positive even for a segment lying entirely in zone $I$ or $II$. To see that, take two events, stationary in  the space  at the point $P\left(0,0,y_3^{(0)}\right)$. The negative term in (39) disappears and obviously $D>0$.\\'
-WHAT IS THE ANALYTICAL WAY TO PROVE THIS? IS $a>0$ A CONDITION?
+Obviously, this path of proving leads to nothing as $D$ can be positive even for a segment lying entirely in zone $I$ or $II$. To see that, take two events, stationary in  the space  at the point $P\left(0,0,y_3^{(0)}\right)$. The negative term in (39) disappears and obviously $D>0$.\\
+$\dagger$WHAT IS THE ANALYTICAL WAY TO PROVE THIS? IS $a>0$ A CONDITION?$\dagger$
 \begin{comment}
 \begin{figure}[H]
 \input{D:/MathLatex/images/fig_p126_Ex1_b.tex}
@@ -1112,7 +1112,7 @@ prove that the differential equations $$ F_{mn,r}+F_{nr,m}+F_{rm,n}=0$$ may be w
 \end{tcolorbox}
 Let's us express $F_{mn}$ as the result of expression $\mathbf{4.324.} $ i.e $$F_{mn} = \epsilon_{mnks} X_kY_s$$ or simplified $$F_{mn} = \epsilon_{mnks} Z_{ks}$$
 This expression gives indeed skew-symmetric tensors.\\\\
-\textit{NOTE:  at first glance this way of representation is  a restriction as the  skew-symmetric Cartesian tensor $F_{mn}$ should moreover be an oriented Cartesian tensor. This can be circumvent by the result of clarification 4.14 where we found that the tensor character  of the quantities $F_{mn}$ was only influenced by the determinant of an orthogonal transformation. So if in the case we are dealing with non-proper orthogonal transformation,  we replace the given identity by   $ \left|A_{mn}\right|F_{mn,r}+\left|A_{mn}\right|F_{nr,m}+\left|A_{mn}\right|F_{rm,n}=0$ and define $\hat{F}_{mn} = \half \epsilon_{rsmn}\left|A_{mn}\right| F_{rs}$ the following reasoning will still be valid.}\\\\
+\textit{NOTE:  at first glance this way of representation is  a restriction as the  skew-symmetric Cartesian tensor $F_{mn}$ should moreover be an oriented Cartesian tensor. This can be circumvent by the result of clarification 4.14 where we found that the tensor character  of the quantities $F_{mn}$ was only influenced by the determinant of an orthogonal transformation. So if in the case we are dealing with non-proper orthogonal transformation,  we replace the given identity by   $ \left|A_{mn}\right|F_{mn,r}+\left|A_{mn}\right|F_{nr,m}+\left|A_{mn}\right|F_{rm,n}=0$ and define $\hat{F}_{mn} = \half \epsilon_{rsmn}\left|A_{mn}\right| F_{rs}$ and the following reasoning will still be valid.}\\\\
  We have:
 \begin{align}
 &\left\{\begin{array}{l}
