--- a/Part1.tex
+++ b/Part1.tex
@@ -100,25 +100,29 @@
 
 %**************************** Document itself *******************************
 \author{Bernard Carrette}
-\gradyear{2020}
+\gradyear{1979}
 \title{Tensor Calculus\\J.L. Synge and A.Schild (Dover Publication)\\ Solutions to exercises\\Part \RomanNumeralCaps{1}\\
 Chapters \RomanNumeralCaps{1} to \RomanNumeralCaps{4}}
 \begin{document}
 \maketitle
 
 \section*{Remarks and warnings}
-You're welcome to use these notes, but they may contain errors, so proceed with caution. If you do find an error, however, I'd be happy to receive bug reports, suggestions, and the like through Github.
+You're welcome to use these notes, but they may contain errors, so proceed with caution : I graduated in 1979, went straight in the industry (where I didn't have to use fancy maths), and picked mathematics and physics again after I retired, so my mathematics got rusty  for sure. If you do find an error, typo's , I'd be happy to receive bug reports, suggestions, and the like, through Github.
 An overview of the material covered in the book can be found in the separate document "Synge overview.pdf".
+
 \section*{Some notation conventions}
+As a rule, I followed the notation used in the book, except some which where easier to type in Latex.
 \begin{center}
-\begin{tabular}{ c c  }
-$\partial_r \equiv \pdv{}{x^r}$ & \\\\
-$\Gamma^r_{mn} \equiv 
+\begin{tabular}{ l l }
+$\dagger$& means that the exercise has only been solved partially or contains i.m.o. a doubtful step\\\\
+$\dagger \dagger$& means that the exercise has not been  solved as it should.\\\\
+$\partial_r $ &$\equiv \pdv{}{x^r}$  \\\\
+$\partial^2_{rs}$  &$\equiv \frac{\partial^2}{\partial x^r \partial x^s}$ \\\\
+$\Gamma^r_{mn} $&$\equiv 
 \begin{Bmatrix}
 r\\
 m n\\
-\end{Bmatrix}$ & Christoffel symbol of the second kind\\\\
-
+\end{Bmatrix}\quad$  Christoffel symbol of the second kind\\\\
 \end{tabular}
 \end{center}
 
