--- a/Part2.tex
+++ b/Part2.tex
@@ -39,6 +39,7 @@
 \usetikzlibrary{decorations.pathreplacing} % for curly braces
 \usetikzlibrary {decorations.markings,shapes.arrows}
 \usetikzlibrary{patterns}
+\usepackage{tkz-euclide}
 \usepackage{tikz-3dplot}
 
 %\usepackage[margin=0cm,nohead]{geometry}
@@ -111,11 +112,14 @@ You're welcome to use these notes, but they may contain errors, so proceed with 
 An overview of the material covered in the book can be found in the separate document "Synge overview.pdf".
 
 \section*{Some notation conventions}
-As a rule, I followed the notation used in the book, except some which where easier to type in Latex.
+
 \begin{center}
 \begin{tabular}{ l l }
 $\dagger$& means that the exercise has only been solved partially or contains i.m.o. a doubtful step\\\\
 $\dagger \dagger$& means that the exercise has not been  solved as it should.\\\\
+$\blacklozenge$&end of an exercise or proof.\\\\
+$\lozenge$&end of Lemma or sub-task of an exercise.\\\\
+&\textbf{As a rule, I followed the notation used in the book,}\\ &\textbf{except some which where easier to type in Latex.}\\\\
 $\partial_r $ &$\equiv \pdv{}{x^r}$  \\\\
 $\partial^2_{rs}$  &$\equiv \frac{\partial^2}{\partial x^r \partial x^s}$ \\\\
 $\Gamma^r_{mn} $&$\equiv 
@@ -133,7 +137,7 @@ m n\\
 %\include{chapter3}
 %\include{chapter4}
 \include{chapter5}
-%\include{chapter6}
+\include{chapter6}
 %\include{chapter7}
 %\include{chapter8}
 %\include{Appendices}
